# relay

./: Cargo.toml  README.md
docs/: FIPS.md
relay/: Cargo.toml
relay-auth/: Cargo.toml
relay-auth/src/: lib.rs
relay-crypto/: Cargo.toml
relay-crypto/src/: backend.rs  default.rs  fips.rs  lib.rs
relay-event-normalization/: Cargo.toml
relay-event-normalization/src/eap/: mod.rs
relay-event-normalization/src/normalize/span/: tag_extraction.rs
relay-pii/: Cargo.toml
relay-pii/src/: utils.rs
relay/src/: main.rs
